test/files/neg/macro-keyword-class2.check
macro-keyword-class2.scala:2: error: identifier expected but 'macro' found.
  class macro
        ^
one error found
